<resources>
    <string name="app_name">DeComp</string>
    <string name="action_settings">Settings</string>
    <string name="images"> <b>Images</b></string>
    <string name="all"><b>All</b></string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>


    <string name="admob_app_id" translatable="false">ca-app-pub-4200151682628675~7434223747</string>
    <string name="splash_screen_ad_unit" translatable="false">ca-app-pub-4200151682628675/4341156546</string>
    <string name="interstitial_adunit" translatable="false">ca-app-pub-4200151682628675/8760613749</string>
    <string name="compressing_dialog_ad_unit" translatable="false">ca-app-pub-4200151682628675/8022955051</string>

    <!--deComp directory-->
    <string name="dir_decomp_created">Directory \'decomp\' created!</string>
    <string name="storage_issue">There is a media storage issue!</string>

    <!--set quality and compress dialog-->
    <string name="images_selected">images selected</string>
    <string name="image_selected">image selected</string>
    <string name="noImageSelected">No image selected</string>
    <string name="set_quality">Set quality for compressed images</string>
    <string name="statCompressingBtn">Start</string>
    <string name="low">low</string>
    <string name="high">high</string>

    <!--information dialog-->
    <string name="intro">DeComp can compress your images based on your need for the quality</string>
    <string name="selectMax100">Select a maximum of 100 images at once. Set the quality as needed. Highest quality may instead enhance your image.</string>
    <string name="happyDecomping">Done, Happy DeComping!</string>

    <!--compressing dialog-->
    <string name="compressing">Compressing</string>
    <string name="original">Original: </string>
    <string name="newText">New: </string>
    <string name="decomping">Decomping</string>
    <string name="no_change">No change</string>
    <string name="compressed">Compressed</string>
    <string name="enhanced">Enhanced</string>
    <string name="new_total">New total: </string>
    <string name="total">Total: </string>
    <string name="done">Done</string>

    <!--compressing screen-->
    <string name="file_size" translatable="false"> %1$.1f\n%2$s</string>
    <string name="compress_progress" translatable="false"> %1$d/%2$d</string>
    <string name="percentage_compressed" translatable="false">%d%%\nsaved</string>
    <string name="percentage_decompressed" translatable="false">%d%%\nlost</string>
    <string name="title_stop_compressnig" translatable="false">Stop compressing?</string>
    <string name="msg_stop_compressnig" translatable="false">The images compressed until your confirmation will be saved. Are you sure?</string>
    <string name="cta_yes" translatable="false">Yes</string>
    <string name="cta_no" translatable="false">No</string>

    <string name="no_images_show">No DeComped image</string>
    <!--deleting images and sharing on CompGallery Activity-->
    <string name="deleteImages">Delete these files?</string>
    <string name="deleting">Deleting…</string>
    <string name="deleted">Deleted</string>
    <string name="unableToDelete">Unable to delete</string>
    <string name="share">Share</string>
    <string name="loading">loading…</string>

    <string name="De">De</string>
    <string name="comp">Comp</string>
    <string name="images_decomped">images\ndecomped</string>

    <!--App promo-->
    <string name="app_promo_label" translatable="false">@string/note_owl_promo_label</string>
    <string name="app_promo_title" translatable="false">@string/note_owl_app_name</string>
    <string name="app_promo_descripion" translatable="false">@string/note_owl_promo_descripion</string>
    <string name="install">Install App</string>
    <string name="promo_secondary_btn_text">Watch Video</string>

    <!--Note Owl promo-->
    <string name="note_owl_promo_label">Note making</string>
    <string name="note_owl_app_name">Note Owl</string>
    <string name="note_owl_promo_descripion">If you haven\'t caught up with your writing habits, try note making with Note Owl. Write small scribbles, detailed descriptions or just a helpful visual reminder.</string>

    <string name="feature_coming_soon">Feature coming soon</string>

    <!--preferences-->
    <string name="pref_decompCount" translatable="false">decompedCount</string>
    <string name="pref_user_data" translatable="false">userData</string>

    <!--tasks-->
    <string name="task_title_compress_images">Compress Images</string>
    <string name="task_title_compress_videos">Compress Videos</string>
    <string name="task_title_record_screen">Record screen</string>
    <string name="task_title_scan_document">Scan documents</string>

    <!--task details-->
    <string name="task_details_compress_images">Select a quality for your images to compress them &amp; save your precious memory</string>
    <string name="task_details_compress_videos">Select a basic option or a more advanced feature to compress your videos</string>
    <string name="task_details_record_screen">Record the screen of your mobile while using it &amp; share it with others or just save it</string>
    <string name="task_details_scan_document">Keep you precious documents safe by digitalising them via the DeComp scanner</string>
    <string name="select_your_task">Select your task</string>

    <!--record screen-->
    <string name="status_recording_details">DeComp is helping you record your screen. Please browse the DeComp gallery, once you are done with screen recording to view the latest recordings.</string>
    <string name="status_not_recording_details">DeComp can help you record your screen and save your recorded screens safely in DeComp gallery, once you are done with screen recording.</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="lbl_record_screen">Record\nScreen</string>
    <string name="lbl_recording_screen">Recording…</string>
    <string name="error_directory_creation">Unable to create directory</string>
    <string name="record_screen">Record\nScreen</string>
    <string name="record_with_audio">Record with audio</string>
    <string name="screen_saved">Recording saved in DeComp Gallery</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="recording_notif_title">DeComp is Recording</string>
    <string name="recording_notif_msg">DeComp is helping you record the screen</string>
    <string name="recording_saved_title">Recording Saved</string>
    <string name="recording_saved_msg">Your screen recording is saved safely in DeComp Gallery</string>
    <string name="failed_to_record">Failed to record screen</string>
    <string name="max_images_reached_msg">You can select up to %d images</string>

    <!--decomp gallery-->
    <string name="tab_text_images">Images</string>
    <string name="tab_text_docs">Documents</string>
    <string name="tab_text_screens">Screens</string>
    <string name="tab_text_videos">Videos</string>

    <string name="gallery_initial_title">DeComp\nGallery</string>
    <string name="gallery_title_images">Compressed\nImages</string>
    <string name="gallery_title_docs">Scanned\nDocuments</string>
    <string name="gallery_title_screens">Recorded\nScreens</string>
    <string name="gallery_title_videos">Compressed\nVideos</string>
    <string name="no_files_present">Folder looks empty</string>
    <string name="files_selected">%d selected</string>

    <!--ad request screen screen-->
    <string name="error_ad_load">Failed to load</string>
    <string name="ad_request_title">Building for you! Support us?</string>
    <string name="ad_request_msg">Developer is building more features for you. Meanwhile, you can support by watching an Ad for him. It helps him in bringing amazing features for you.</string>
    <string name="ad_request_btn">Watch &amp; Support</string>
    <string name="browse_decomp_gallery">Browse decomp gallery</string>
</resources>
