<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/compressingTxtTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/decomping"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/divider_compressing_recycler"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#30424242"
        android:layout_below="@+id/compressingTxtTv"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/compressingRecView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_compressing_recycler"
        android:layout_above="@+id/ll"/>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_alignParentBottom="true">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_height="3dp"
            android:progressDrawable="@drawable/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/counter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="/"
                android:gravity="end"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="14sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/compSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_total"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>