<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--artwork-->
    <ImageView
        android:id="@+id/imv_ad_request"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/art_developer" />

    <!--title-->
    <TextView
        android:id="@+id/tv_ad_request_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/ad_request_title"
        android:textAlignment="center"
        android:textColor="@color/primaryTextBlack"
        android:textSize="@dimen/txt_24"
        android:fontFamily="@font/raleway"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_ad_request" />

    <!--message-->
    <TextView
        android:id="@+id/tv_ad_request_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ad_request_msg"
        android:textAlignment="center"
        android:textColor="@color/primaryTextBlack"
        android:fontFamily="@font/raleway"
        app:layout_constraintEnd_toEndOf="@+id/tv_ad_request_title"
        app:layout_constraintStart_toStartOf="@+id/tv_ad_request_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_ad_request_title" />

    <!--watch ad to join-->
    <Button
        android:id="@+id/btn_watch_ad"
        style="@style/BaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ad_request_btn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ad_request_msg" />

    <!--progress for loading ad-->
    <ProgressBar
        android:id="@+id/pb_ad_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ad_request_msg" />

</androidx.constraintlayout.widget.ConstraintLayout>
