<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <include
        android:id="@+id/include"
        layout="@layout/thumbnail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/originalName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="Orirginal file name"
        android:textColor="@color/primaryTextBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/include"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/doneIv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:lottie_autoPlay="false"
        app:lottie_fileName="checked_done_.json"
        app:lottie_loop="false"/>

    <ProgressBar
        android:id="@+id/compressingPb"
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="@+id/compressingTv"
        app:layout_constraintStart_toStartOf="@+id/originalName"
        app:layout_constraintTop_toTopOf="@+id/compressingTv"/>

    <TextView
        android:id="@+id/compressingTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="4dp"
        android:text="@string/compressing"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/compressingPb"
        app:layout_constraintTop_toBottomOf="@+id/originalName"/>

    <TextView
        android:id="@+id/original"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/original"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/compressingPb"
        app:layout_constraintTop_toBottomOf="@+id/compressingTv"/>

    <TextView
        android:id="@+id/compressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/newText"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/original"
        app:layout_constraintTop_toBottomOf="@+id/original"/>

</androidx.constraintlayout.widget.ConstraintLayout>