<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coord"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#fff">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:minHeight="?attr/actionBarSize"
            app:contentScrim="@color/colorPrimary"
            app:collapsedTitleTextAppearance="@style/collpToolbar"
            app:expandedTitleMarginStart="24dp"
            app:expandedTitleTextAppearance="@style/expandedToolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/images">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#0000"
                app:layout_collapseMode="pin"
                app:theme="@style/AppTheme.AppBarOverlay">

                <CheckBox
                    android:id="@+id/selAllCb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/all"
                    android:textColor="#fff"
                    android:visibility="invisible"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imgRecView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:padding="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/thumbnail" />

    <TextView
        android:id="@+id/noImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_images_show"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:visibility="invisible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shareFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/share"
        app:fabSize="normal" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="mini"
        app:srcCompat="@drawable/delete"
        android:layout_alignParentLeft="true"
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="16dp"
        app:backgroundTint="#F44336" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>